--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </div>
     </header>
     <div class="container">
+      <button id="create-post">Create Post</button>
       <div class="posts"></div>
       <form
         id="create-post"
