--- a/sign-up.html
+++ b/sign-up.html
@@ -28,7 +28,7 @@
         <input
           class="appearance:none background-color:neutral-ffffff border-color:neutral-4c5b5c border-radius:0 border-style:solid border-width:1px color:neutral-483e40 min-height:form-input padding:12px width:100% :hocus--border-color:neutral-000000"
           id="password" name="password" required type="password" autocomplete="current-password">
-          <label class="color:blue-265f8e display:block padding-bottom:8px font-size:14px font-weight:500" for="phone-number">
+          <label class="color:blue-265f8e displ0ay:block padding-bottom:8px font-size:14px font-weight:500" for="phone-number">
             Phone Number
           </label>
           <input
