--- a/sign-up.html
+++ b/sign-up.html
@@ -7,7 +7,7 @@
   <title>Author Uploading App</title>
   <link rel="stylesheet" href="./css/main.min.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script async defer src="./src/sign-up.js"></script>
+  <script type="module" async defer src="./src/sign-up.js"></script>
 </head>
 <body>
   <div class="container">
